
EXTRA_DIST = bgpd.init bgpd.service isisd.init \
	isisd.service ospf6d.init ospf6d.service ospfd.init ospfd.service \
	quagga.logrotate quagga.pam quagga.spec \
	quagga.sysconfig ripd.init ripd.service ripngd.init ripngd.service \
	watchquagga.init pimd.init pimd.service zebra.init zebra.service \
	README.rpm_build.md

