EXTRA_DIST = snapcraft.yaml \
   scripts/Makefile scripts/zebra-service scripts/bgpd-service \
   scripts/isisd-service scripts/ripd-service scripts/ripngd-service \
   scripts/ospf6d-service scripts/ospfd-service \
   scripts/isisd-service scripts/pimd-service \
   scripts/ldpd-service \
   defaults/bgpd.conf.default defaults/isisd.conf.default \
   defaults/ospf6d.conf.default defaults/ospfd.conf.default \
   defaults/pimd.conf.default defaults/zebra.conf.default \
   defaults/ripd.conf.default defaults/ripngd.conf.default \
   defaults/ldpd.conf.default defaults/vtysh.conf.default
