EXTRA_DIST = snapcraft.yaml \
	README.snap_build.md \
	README.usage.md \
	scripts/Makefile \
	scripts/bgpd-service \
	scripts/isisd-service \
	scripts/ldpd-service \
	scripts/ospf6d-service \
	scripts/ospfd-service \
	scripts/pimd-service \
	scripts/ripd-service \
	scripts/ripngd-service \
	scripts/zebra-service \
	defaults/bgpd.conf.default \
	defaults/isisd.conf.default \
	defaults/ldpd.conf.default \
	defaults/ospf6d.conf.default \
	defaults/ospfd.conf.default \
	defaults/pimd.conf.default \
	defaults/ripd.conf.default \
	defaults/ripngd.conf.default \
	defaults/vtysh.conf.default \
	defaults/zebra.conf.default \
	helpers \
	snap
